--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
   "presets": [
-    "@babel/preset-env", 
-    "@babel/preset-react"
+    "@babel/preset-env"
+  ],
+  "plugins": [
+    ["transform-react-jsx", {
+        "pragma": "React.createElement"
+    }]
   ]
 }
